--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=journaldb
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
 
-#spring.data.mongodb.username=journaldb
-#spring.data.mongodb.password=journaldb
+spring.data.mongodb.uri=mongodb+srv://202151121:3ZC23MAAeEBALqrR@cluster0.okz8p77.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.database=journaldb
+spring.data.mongodb.auto-index-creation = true
+spring.data.mongodb.username=202151121
+spring.data.mongodb.password=3ZC23MAAeEBALqrR
