--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.data.mongodb.database=journaldb
 spring.data.mongodb.auto-index-creation = true
 spring.data.mongodb.username=202151121
 spring.data.mongodb.password=3ZC23MAAeEBALqrR
+spring.main.allow-circular-references=true
